--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -14,6 +14,9 @@
     border-radius: 0;
     border: 1px solid #d9d9d9;
     background-color: #f9f9f9;
+    margin-bottom: 8px;
+    padding-left: 5px;
+    font-size: 13px;
 }
 
 .brands-explore-advance-search label {
